# twitch-logs

./: .env.example  docker-compose.yml  pyproject.toml
app/: app.py
db/: init.sql
